--- a/res/index.html
+++ b/res/index.html
@@ -10,58 +10,72 @@
 
 <!-- Navigation Bar -->
 <nav>
-        <li class="logo-item">
-            <a href="index.html">
-                <img src="logo.png" alt="Logo" class="logo">
-            </a>
-        </li>
+    <li class="logo-item">
+        <a href="index.html">
+            <img src="logo.png" alt="Logo" class="logo">
+        </a>
+    </li>
     <ul>
         <li>
             <a href="index.html">
-            <div class="home-icon">
-                <div class="roof">
-                    <div class="roof-edge"></div>
+                <div class="home-icon">
+                    <div class="roof">
+                    </div>
+                    <div class="front"></div>
                 </div>
-                <div class="front"></div>
-            </div>
             </a>
         </li>
         <li>
             <a href="about.html">
-            <div class="about-icon">
-                <div class="head">
-                    <div class="eyes"></div>
-                    <div class="beard"></div>
+                <div class="about-icon">
+                    <div class="head">
+                    </div>
                 </div>
-            </div>
+            </a>
+        </li>
+        <li>
+            <a href="mind_map.html">
+                <div class="about-icon">
+                    <div class="head">
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="battleship.html">
+                <div class="about-icon">
+                    <div class="head">
+                    </div>
+                </div>
             </a>
         </li>
         <li>
             <a href="bucketList.html">
-            <div class="work-icon">
-                <div class="paper"></div>
-                <div class="lines"></div>
-                <div class="lines"></div>
-                <div class="lines"></div>
-            </div>
+                <div class="work-icon">
+                    <div class="paper"></div>
+                    <div class="lines"></div>
+                    <div class="lines"></div>
+                    <div class="lines"></div>
+                </div>
             </a>
         </li>
         <li>
             <a href="#.html">
-            <div class="mail-icon">
-                <div class="mail-base">
-                    <div class="mail-top"></div>
+                <div class="mail-icon">
+                    <div class="mail-base">
+                        <div class="mail-top"></div>
+                    </div>
                 </div>
-            </div>
             </a>
         </li>
     </ul>
 </nav>
+
 <div class="center">
     <div class="center-container">
     <section>
         <h1>ReKindl</h1>
-        <h2>Reconnecting People. Rekindling Memories. Redefining Plutonic Relationships</h2>
+        <h2>Reconnecting People. Rekindling Memories. Redefining Platonic Relationships</h2>
     </section>
 
     <!-- Hero Section -->
@@ -69,7 +83,7 @@
         <div class="hero-text">
             <h1>Stuck on Plans? Here’s What to Do for Your Next Hangout!</h1>
             <p>Take the awkwardness out of socializing! Pick one of these fun activities to reconnect with an old friend, colleague, or acquaintance.</p>
-            <a href="bucketList.html" class="btn">View the Bucket List</a>
+            <a href="profile.html" class="btn">Create a Profile</a>
         </div>
     </header>
 
@@ -82,8 +96,29 @@
 
             <!-- Contact Section -->
         <br>
+        <section id="mindmap" class="hero">
+            <div class="hero-text">
+                <h1> Mindmap </h1>
+                <p></p>
+                <a href="mind_map.html" class="btn">MindMap!</a>
+            </div>
+        </section>
         <br>
+        <section id="game" class="hero">
+            <div class="hero-text">
+                <h1> Game </h1>
+                <p></p>
+                <a href="battleshipsgame.html" class="btn">Try Me!</a>
+            </div>
+        </section>
         <br>
+        <section id="timecapsule" class="hero">
+            <div class="hero-text">
+                <h1> TimeCapsule </h1>
+                <p></p>
+                <a href="TimeCapsule.html" class="btn">Try Me!</a>
+            </div>
+        </section>
         <br>
         <br>
         <br>
@@ -95,6 +130,8 @@
                 <a href="mailto:contact@reconnect.com" class="btn" style="color: white;">Contact Us</a>
             </div>
             </section>
+
+
 
     </div>
 </div>
