--- a/res/bucketList.html
+++ b/res/bucketList.html
@@ -30,8 +30,22 @@
             <a href="about.html">
                 <div class="about-icon">
                     <div class="head">
-                        <div class="eyes"></div>
-                        <div class="beard"></div>
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="mind_map.html">
+                <div class="about-icon">
+                    <div class="head">
+                    </div>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="battleship.html">
+                <div class="about-icon">
+                    <div class="head">
                     </div>
                 </div>
             </a>
@@ -60,8 +74,8 @@
 
 
 <div class="container">
-    <h1>🎉 Plutonic Date Bucket List 🎉</h1>
-    <p>Take the awkwardness out of socializing! Pick one of these fun activities to reconnect with an old friend, colleague, or acquaintance!</p>
+    <h1>🎉 Platonic Date Bucket List 🎉</h1>
+    <p>Take the awkwardness out of socialising! Pick one of these fun activities to reconnect with an old friend, colleague, or acquaintance!</p>
 git
     <ul id="bucket-list"></ul>
 
